--- a/TrabalhoBanco/.classpath
+++ b/TrabalhoBanco/.classpath
@@ -34,5 +34,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Aluno/Downloads/apache-tomcat-8.0.43/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
